# spellcaster

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  __init__.py  adaptive_evolution.py  complexity_index.py  compression.py  evolution.py  imports.py  keyword.py  noun_dependencies.py  pyproject.toml  sentence_parser.py  smoothing.py  spellcaster_lcx_index.py  statistics.py  test_adaptive_evolution.py  test_api_and_exporters.py  test_core_compression.py  test_core_entropy.py  test_io.py  test_keyword_erp.py  test_valence_model.py
spellcaster/: __init__.py  exceptions.py
spellcaster/analyzers/: keyword_erp.py  valence_model.py
spellcaster/core/: __init__.py  entropy.py  information.py  nlp.py
spellcaster/extractors/: __init__.py  action_frames.py
spellcaster/io/: exporters.py  readers.py
spellcaster/results/: complexity.py  valence.py
spellcaster/utils/: __init__.py
spellcaster/visualization/: __init__.py  plots.py
tests/: conftest.py  test_complexity_index.py  test_core_information.py  test_core_nlp.py  test_extractors.py  test_results.py  test_utils.py  test_visualization.py
